# Movie-Backend

./: README.md  requirements.txt
.github/workflows/: python-publish.yml
api/: .dockerignore  README.md  database.py  models.py  requirements.txt  test_query_helpers.py
sdk/: README.md  pyproject.toml  test_sdk.py
